--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,6 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Boss @ViewBag.boss</p>
+<p>@ViewBag.boss</p>
+ 
